[gd_scene load_steps=42 format=2]

[ext_resource path="res://assets/environment/SunsetSky-mid.jpg" type="Texture" id=1]
[ext_resource path="res://assets/programmerArt/image-asset.jpeg" type="Texture" id=2]
[ext_resource path="res://assets/audio/explosion.mp3" type="AudioStream" id=3]
[ext_resource path="res://scripts/end_scene.gd" type="Script" id=5]
[ext_resource path="res://scripts/start-endPoint.gd" type="Script" id=7]
[ext_resource path="res://assets/programmerArt/billboard.png" type="Texture" id=8]
[ext_resource path="res://assets/3d/glb/train/trainside.material" type="Material" id=9]
[ext_resource path="res://scenes/assets/3d/track.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/shaders/movingGrass.tres" type="Material" id=12]
[ext_resource path="res://assets/programmerArt/skyline.png" type="Texture" id=13]
[ext_resource path="res://scenes/interactibles/ventDoor.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/textures/Metal Floor 2.PNG" type="Texture" id=15]
[ext_resource path="res://assets/textures/Brick 1.PNG" type="Texture" id=16]
[ext_resource path="res://assets/textures/SUI/SU_WH_3.PNG" type="Texture" id=17]
[ext_resource path="res://assets/programmerArt/Trans.png" type="Texture" id=19]
[ext_resource path="res://assets/programmerArt/smoke.png" type="Texture" id=20]
[ext_resource path="res://assets/audio/587180__derplayer__explosion_near.wav" type="AudioStream" id=21]

[sub_resource type="PanoramaSky" id=24]
panorama = ExtResource( 1 )

[sub_resource type="Environment" id=25]
background_mode = 2
background_sky = SubResource( 24 )
background_sky_orientation = Basis( -1, 0, 0, 0, -1, 0, 0, 0, 1 )
background_color = Color( 0.333333, 0.333333, 0.333333, 1 )
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.8
ambient_light_sky_contribution = 0.0
fog_enabled = true
fog_color = Color( 0, 0, 0, 1 )
fog_sun_color = Color( 1, 1, 1, 1 )
fog_depth_begin = 2.0
fog_depth_end = 222.3
fog_depth_curve = 0.406126
dof_blur_near_distance = 8192.0
dof_blur_near_amount = 0.07
dof_blur_near_quality = 0

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 100, 100 )

[sub_resource type="PlaneMesh" id=11]
size = Vector2( 100, 100 )

[sub_resource type="Shader" id=12]
code = "shader_type spatial;
render_mode cull_front, depth_draw_alpha_prepass;

uniform sampler2D sample;
uniform float scale = 5.0;
uniform float speed = 2;

void fragment() {
	vec2 newUV = vec2(UV.x * 2.0 - TIME * speed, UV.y);
	if (UV.x >= 0.5) {
	newUV.x = UV.x * 2.0 + TIME * speed;
	vec4 text = texture(sample, newUV);
	ALBEDO = text.rgb;
	ALPHA = text.a;
	}
	if (UV.x < 0.5) {
	vec4 text = texture(sample, newUV);
	ALBEDO = text.rgb;
	ALPHA = text.a;
	}
}"

[sub_resource type="ShaderMaterial" id=13]
shader = SubResource( 12 )
shader_param/scale = 5.0
shader_param/speed = 0.25
shader_param/sample = ExtResource( 13 )

[sub_resource type="SphereMesh" id=14]
radius = 50.0
height = 50.0

[sub_resource type="BoxShape" id=10]
extents = Vector3( 1.5, 0.5, 5 )

[sub_resource type="ArrayMesh" id=9]
resource_name = "train_Cube001"
surfaces/0 = {
"aabb": AABB( -0.723837, -1.07597, -2, 1.44767, 1.746, 4.00001 ),
"array_data": PoolByteArray( 58, 181, 252, 190, 111, 185, 137, 191, 0, 0, 0, 64, 166, 220, 0, 63, 224, 59, 34, 59, 58, 181, 252, 190, 111, 185, 137, 191, 0, 0, 0, 64, 0, 129, 0, 63, 172, 59, 166, 10, 58, 181, 252, 190, 111, 185, 137, 191, 0, 0, 0, 64, 0, 0, 0, 1, 46, 58, 141, 57, 98, 98, 42, 191, 64, 74, 1, 63, 203, 175, 249, 63, 136, 6, 0, 63, 200, 59, 196, 52, 98, 98, 42, 191, 64, 74, 1, 63, 203, 175, 249, 63, 222, 92, 130, 1, 185, 34, 245, 54, 98, 98, 42, 191, 64, 74, 1, 63, 203, 175, 249, 63, 0, 5, 0, 2, 152, 55, 242, 57, 98, 98, 42, 191, 64, 74, 1, 63, 203, 175, 249, 63, 0, 35, 214, 121, 185, 34, 245, 54, 58, 181, 252, 190, 111, 185, 137, 191, 0, 0, 0, 192, 166, 220, 0, 63, 123, 37, 34, 59, 58, 181, 252, 190, 111, 185, 137, 191, 0, 0, 0, 192, 0, 129, 0, 63, 229, 54, 168, 10, 58, 181, 252, 190, 111, 185, 137, 191, 0, 0, 0, 192, 127, 127, 0, 1, 46, 58, 152, 54, 98, 98, 42, 191, 64, 74, 1, 63, 204, 175, 249, 191, 136, 6, 0, 63, 66, 40, 196, 52, 98, 98, 42, 191, 64, 74, 1, 63, 204, 175, 249, 191, 222, 92, 126, 126, 86, 56, 245, 54, 98, 98, 42, 191, 64, 74, 1, 63, 204, 175, 249, 191, 121, 127, 251, 1, 152, 55, 207, 53, 98, 98, 42, 191, 64, 74, 1, 63, 204, 175, 249, 191, 91, 127, 36, 1, 86, 56, 245, 54, 58, 181, 252, 62, 111, 185, 137, 191, 0, 0, 0, 64, 0, 129, 0, 63, 172, 59, 83, 50, 58, 181, 252, 62, 111, 185, 137, 191, 0, 0, 0, 64, 0, 0, 0, 1, 46, 58, 152, 54, 58, 181, 252, 62, 111, 185, 137, 191, 0, 0, 0, 64, 90, 220, 130, 1, 73, 37, 44, 59, 98, 98, 42, 63, 64, 74, 1, 63, 203, 175, 249, 63, 0, 5, 0, 2, 152, 55, 207, 53, 98, 98, 42, 63, 64, 74, 1, 63, 203, 175, 249, 63, 0, 35, 36, 125, 189, 34, 185, 57, 98, 98, 42, 63, 64, 74, 1, 63, 203, 175, 249, 63, 34, 92, 126, 1, 189, 34, 185, 57, 98, 98, 42, 63, 64, 74, 1, 63, 203, 175, 249, 63, 120, 6, 126, 1, 42, 40, 215, 52, 58, 181, 252, 62, 111, 185, 137, 191, 0, 0, 0, 192, 0, 129, 0, 63, 229, 54, 83, 50, 58, 181, 252, 62, 111, 185, 137, 191, 0, 0, 0, 192, 127, 127, 0, 1, 46, 58, 141, 57, 58, 181, 252, 62, 111, 185, 137, 191, 0, 0, 0, 192, 90, 220, 130, 1, 222, 59, 44, 59, 98, 98, 42, 63, 64, 74, 1, 63, 204, 175, 249, 191, 121, 127, 5, 1, 152, 55, 241, 57, 98, 98, 42, 63, 64, 74, 1, 63, 204, 175, 249, 191, 91, 127, 214, 5, 86, 56, 185, 57, 98, 98, 42, 63, 64, 74, 1, 63, 204, 175, 249, 191, 34, 92, 127, 1, 86, 56, 185, 57, 98, 98, 42, 63, 64, 74, 1, 63, 204, 175, 249, 191, 120, 6, 126, 1, 198, 59, 215, 52, 102, 77, 57, 191, 83, 253, 3, 191, 0, 0, 0, 64, 136, 6, 0, 63, 224, 59, 93, 57, 102, 77, 57, 191, 83, 253, 3, 191, 0, 0, 0, 64, 166, 220, 0, 63, 224, 59, 93, 57, 102, 77, 57, 191, 83, 253, 3, 191, 0, 0, 0, 64, 0, 0, 0, 1, 86, 57, 20, 58, 102, 77, 57, 191, 83, 253, 3, 191, 0, 0, 0, 64, 0, 5, 0, 2, 86, 57, 20, 58, 102, 77, 57, 191, 83, 253, 3, 191, 0, 0, 0, 192, 136, 6, 0, 63, 123, 37, 93, 57, 102, 77, 57, 191, 83, 253, 3, 191, 0, 0, 0, 192, 166, 220, 0, 63, 123, 37, 93, 57, 102, 77, 57, 191, 83, 253, 3, 191, 0, 0, 0, 192, 127, 127, 0, 1, 86, 57, 139, 53, 102, 77, 57, 191, 83, 253, 3, 191, 0, 0, 0, 192, 121, 127, 5, 1, 86, 57, 139, 53, 102, 77, 57, 63, 83, 253, 3, 191, 0, 0, 0, 192, 127, 127, 0, 1, 86, 57, 19, 58, 102, 77, 57, 63, 83, 253, 3, 191, 0, 0, 0, 192, 121, 127, 5, 1, 86, 57, 19, 58, 102, 77, 57, 63, 83, 253, 3, 191, 0, 0, 0, 192, 90, 220, 130, 1, 222, 59, 103, 57, 102, 77, 57, 63, 83, 253, 3, 191, 0, 0, 0, 192, 120, 6, 126, 1, 222, 59, 103, 57, 102, 77, 57, 63, 83, 253, 3, 191, 0, 0, 0, 64, 0, 0, 0, 1, 86, 57, 139, 53, 102, 77, 57, 63, 83, 253, 3, 191, 0, 0, 0, 64, 0, 5, 0, 2, 86, 57, 139, 53, 102, 77, 57, 63, 83, 253, 3, 191, 0, 0, 0, 64, 90, 220, 130, 1, 73, 37, 103, 57, 102, 77, 57, 63, 83, 253, 3, 191, 0, 0, 0, 64, 120, 6, 126, 1, 73, 37, 103, 57, 124, 157, 103, 190, 214, 134, 43, 63, 102, 161, 241, 63, 222, 92, 126, 126, 173, 40, 65, 56, 124, 157, 103, 190, 214, 134, 43, 63, 102, 161, 241, 63, 0, 35, 206, 116, 173, 40, 65, 56, 124, 157, 103, 190, 214, 134, 43, 63, 102, 161, 241, 63, 0, 127, 127, 126, 173, 40, 65, 56, 124, 157, 103, 190, 214, 134, 43, 63, 104, 161, 241, 191, 222, 92, 126, 126, 37, 56, 58, 56, 124, 157, 103, 190, 214, 134, 43, 63, 104, 161, 241, 191, 91, 127, 35, 1, 37, 56, 58, 56, 124, 157, 103, 190, 214, 134, 43, 63, 104, 161, 241, 191, 0, 127, 127, 126, 37, 56, 58, 56, 124, 157, 103, 62, 214, 134, 43, 63, 102, 161, 241, 63, 0, 35, 35, 126, 195, 40, 250, 56, 124, 157, 103, 62, 214, 134, 43, 63, 102, 161, 241, 63, 0, 127, 127, 126, 195, 40, 250, 56, 124, 157, 103, 62, 214, 134, 43, 63, 102, 161, 241, 63, 34, 92, 126, 1, 195, 40, 250, 56, 124, 157, 103, 62, 214, 134, 43, 63, 104, 161, 241, 191, 91, 127, 206, 10, 38, 56, 243, 56, 124, 157, 103, 62, 214, 134, 43, 63, 104, 161, 241, 191, 0, 127, 127, 126, 38, 56, 243, 56, 124, 157, 103, 62, 214, 134, 43, 63, 104, 161, 241, 191, 34, 92, 126, 1, 38, 56, 243, 56 ),
"array_index_data": PoolByteArray( 28, 0, 10, 0, 3, 0, 28, 0, 32, 0, 10, 0, 35, 0, 24, 0, 12, 0, 35, 0, 37, 0, 24, 0, 39, 0, 20, 0, 27, 0, 39, 0, 43, 0, 20, 0, 41, 0, 5, 0, 17, 0, 41, 0, 31, 0, 5, 0, 8, 0, 14, 0, 21, 0, 8, 0, 1, 0, 14, 0, 19, 0, 55, 0, 26, 0, 19, 0, 52, 0, 55, 0, 15, 0, 30, 0, 40, 0, 15, 0, 2, 0, 30, 0, 23, 0, 42, 0, 38, 0, 23, 0, 16, 0, 42, 0, 9, 0, 36, 0, 34, 0, 9, 0, 22, 0, 36, 0, 0, 0, 33, 0, 29, 0, 0, 0, 7, 0, 33, 0, 54, 0, 46, 0, 49, 0, 54, 0, 51, 0, 46, 0, 11, 0, 44, 0, 4, 0, 11, 0, 47, 0, 44, 0, 6, 0, 50, 0, 18, 0, 6, 0, 45, 0, 50, 0, 25, 0, 48, 0, 13, 0, 25, 0, 53, 0, 48, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 84,
"material": ExtResource( 9 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 56
}

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.192157, 0.192157, 0.192157, 1 )

[sub_resource type="SpatialMaterial" id=8]
flags_unshaded = true
albedo_texture = ExtResource( 8 )
uv1_scale = Vector3( -1, 0.5, 0 )
uv1_offset = Vector3( 0, 0.25, 0 )
uv2_scale = Vector3( 0, 0, 0 )
distance_fade_mode = 2
distance_fade_min_distance = 5.0
distance_fade_max_distance = 1.0

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CubeMesh" id=3]
material = SubResource( 5 )
size = Vector3( 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=15]
albedo_texture = ExtResource( 16 )
uv1_scale = Vector3( 0.5, 0.5, 0.5 )
uv1_triplanar = true

[sub_resource type="SpatialMaterial" id=16]
albedo_texture = ExtResource( 15 )
uv1_scale = Vector3( 0.5, 0.5, 0.5 )
uv1_triplanar = true

[sub_resource type="SpatialMaterial" id=26]
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0, 1, 0.0627451, 1 )
albedo_texture = ExtResource( 20 )

[sub_resource type="QuadMesh" id=2]
material = SubResource( 26 )

[sub_resource type="Shader" id=17]
code = "shader_type spatial;

uniform sampler2D sample;
uniform float scale = 12.0;
uniform float speed = 1.0;

void vertex() {
	vec4 text = texture(sample, UV);
	VERTEX.y = text.r * 100.0;
}

void fragment() {
	vec2 newUV = vec2(UV.x * scale, UV.y * scale - TIME * speed);
	vec4 text = texture(sample, newUV);
	//ALBEDO = text.rgb;
}

"

[sub_resource type="OpenSimplexNoise" id=22]

[sub_resource type="NoiseTexture" id=21]
noise = SubResource( 22 )

[sub_resource type="ShaderMaterial" id=23]
shader = SubResource( 17 )
shader_param/scale = 12.0
shader_param/speed = 1.0
shader_param/sample = SubResource( 21 )

[sub_resource type="PlaneMesh" id=19]
material = SubResource( 23 )
size = Vector2( 1000, 1000 )
subdivide_width = 100
subdivide_depth = 100

[sub_resource type="Animation" id=27]
resource_name = "New Anim"
length = 32.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10, 26 ),
"transitions": PoolRealArray( 1, 2.21914, 1 ),
"update": 0,
"values": [ Vector3( 60, 35.298, 0 ), Vector3( 60, 35.298, 0 ), Vector3( 0, 45, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6, 14, 18, 21, 24, 27 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, true, true, true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("building/StaticBody/buildingMesh/CSGBox/massive:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 7, 24 ),
"transitions": PoolRealArray( 1, 1.93187, 1 ),
"update": 0,
"values": [ Vector3( 28, 39, -29 ), Vector3( 28, 39, -29 ), Vector3( 28, -550, -29 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Camera:fov")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 10, 26 ),
"transitions": PoolRealArray( 1, 1.5, 1 ),
"update": 0,
"values": [ 70.0, 70.0, 13.2 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("building/StaticBody/buildingMesh/CSGBox/massive/AudioStreamPlayer3D:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 11, 35 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("building/StaticBody/buildingMesh/CSGBox/massive/AudioStreamPlayer3D2:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 6, 13, 23, 31 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CanvasLayer/Control/ColorRect:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 30, 32 ),
"transitions": PoolRealArray( 1, 1.93187, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("building/StaticBody/buildingMesh/CSGBox/massive/AudioStreamPlayer3D:max_db")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 26, 29 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 3.0, 3.0, -24.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("building/StaticBody/buildingMesh/CSGBox/massive/AudioStreamPlayer3D2:unit_db")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = false
tracks/8/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("building/StaticBody/buildingMesh/CSGBox/massive/AudioStreamPlayer3D:unit_db")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 26, 31 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 39.149, 39.149, 0.0 ]
}

[node name="World" type="Spatial"]
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.816158, 0.500415, 0.288915, 0, 0.5, -0.866025, -0.577829, 0.706813, 0.408079, 47.5257, 0, 48.443 )
current = true
far = 8192.0

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.04847, 1.08965, -4.62217 )
visible = false
texture = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 25 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 12 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 22, 15.5311, 0 )
visible = false
mesh = SubResource( 11 )
material/0 = SubResource( 13 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 10.8191, 0 )
visible = false
mesh = SubResource( 14 )
material/0 = SubResource( 13 )

[node name="train" type="StaticBody" parent="." groups=["CantShoot"]]

[node name="CollisionShape" type="CollisionShape" parent="train"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )
shape = SubResource( 10 )

[node name="CollisionShape2" type="CollisionShape" parent="train"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -2, 1.19209e-07, 0 )
shape = SubResource( 10 )

[node name="CollisionShape3" type="CollisionShape" parent="train"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 2, 1.19209e-07, 0 )
shape = SubResource( 10 )

[node name="CollisionShape4" type="CollisionShape" parent="train"]
transform = Transform( 1.91069e-15, -4.37114e-08, 1, -1, -4.37114e-08, 0, 4.37114e-08, -1, -4.37114e-08, -2, 1.19209e-07, 4.5 )
shape = SubResource( 10 )

[node name="CollisionShape5" type="CollisionShape" parent="train"]
transform = Transform( 1.91069e-15, -4.37114e-08, 1, -1, -4.37114e-08, 0, 4.37114e-08, -1, -4.37114e-08, -2, 1.19209e-07, -4.5 )
shape = SubResource( 10 )

[node name="train" type="MeshInstance" parent="train"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -2.7, 0 )
mesh = SubResource( 9 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.467066, 0.884223, 0, -0.884223, -0.467066, 0, 10.0049, 2.83859 )
light_energy = 0.3
light_specular = 0.0
directional_shadow_mode = 0

[node name="moving" type="Spatial" parent="."]
visible = false

[node name="billboard" type="CSGCombiner" parent="moving"]
transform = Transform( 2.12132, 0, 2.12132, 0, 3, 0, -2.12132, 0, 2.12132, -11.3133, -4.8, -5.09069 )

[node name="CSGCylinder" type="CSGCylinder" parent="moving/billboard"]
transform = Transform( -0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, -0.965926, 0, 0, 0 )
radius = 0.5
height = 0.3
material = SubResource( 7 )

[node name="CSGCylinder2" type="CSGCylinder" parent="moving/billboard"]
transform = Transform( -0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, -0.965926, 0, 0.2, 0 )
radius = 0.3
height = 0.3
material = SubResource( 7 )

[node name="CSGCylinder3" type="CSGCylinder" parent="moving/billboard"]
transform = Transform( -0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, -0.965926, 0, 1.8, 0 )
radius = 0.1
height = 3.0
material = SubResource( 7 )

[node name="CSGBox" type="CSGBox" parent="moving/billboard"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.38419e-07, 3.4, 0.1 )
width = 4.0
depth = 0.1
material = SubResource( 8 )

[node name="Sprite3D" type="Sprite3D" parent="moving/billboard"]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 3.4, 0 )
texture = ExtResource( 19 )

[node name="train_track" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.9, 0 )

[node name="track" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 10 )

[node name="track2" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 6 )

[node name="track3" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 2 )

[node name="track4" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -2 )

[node name="track5" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -6 )

[node name="track6" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -10 )

[node name="track7" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -14 )

[node name="track8" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -18 )

[node name="track9" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -22 )

[node name="track10" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -26 )

[node name="track11" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -30 )

[node name="track12" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -34 )

[node name="track13" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -38 )

[node name="track14" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -42 )

[node name="track15" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -46 )

[node name="track16" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -50 )

[node name="track17" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 42 )

[node name="track18" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 38 )

[node name="track19" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 34 )

[node name="track20" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 30 )

[node name="track21" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 26 )

[node name="track22" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 22 )

[node name="track23" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 18 )

[node name="track24" parent="train_track" instance=ExtResource( 11 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 14 )

[node name="startTrees" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16, -5.1, -50 )

[node name="endTrees" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16, -5.1, -50 )

[node name="building" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, -8 )

[node name="endPoint" type="Spatial" parent="building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.982, -1.5, 0.194 )
script = ExtResource( 7 )

[node name="Area" type="Area" parent="building/endPoint"]

[node name="CollisionShape" type="CollisionShape" parent="building/endPoint/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="building/endPoint/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
mesh = SubResource( 3 )
skeleton = NodePath("../..")

[node name="StaticBody" type="StaticBody" parent="building"]

[node name="buildingMesh" type="CSGCombiner" parent="building/StaticBody"]
use_collision = true
collision_layer = 7
collision_mask = 7

[node name="CSGBox" type="CSGBox" parent="building/StaticBody/buildingMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0.7 )
width = 24.0
height = 14.0
depth = 8.0
material = SubResource( 15 )

[node name="CSGBox2" type="CSGBox" parent="building/StaticBody/buildingMesh/CSGBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 2, 3 )
operation = 2
width = 1.0
height = 1.0
depth = 6.0
material = SubResource( 16 )

[node name="CSGBox3" type="CSGBox" parent="building/StaticBody/buildingMesh/CSGBox"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 9.5, 2, 0 )
operation = 2
width = 1.0
height = 1.0
depth = 4.0
material = SubResource( 16 )

[node name="CSGBox4" type="CSGBox" parent="building/StaticBody/buildingMesh/CSGBox"]
transform = Transform( 1.91069e-15, 1, 4.37114e-08, 4.37114e-08, -4.37114e-08, 1, 1, 0, -4.37114e-08, 11, 0.5, 0 )
operation = 2
width = 1.0
height = 1.0
depth = 4.0
material = SubResource( 16 )

[node name="CSGBox" type="CSGBox" parent="building/StaticBody/buildingMesh/CSGBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, -1, 5 )
operation = 2
width = 4.0
height = 4.0
depth = 20.0

[node name="massive" type="CSGBox" parent="building/StaticBody/buildingMesh/CSGBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 28, 39, -29 )
width = 50.0
height = 1000.0
depth = 50.0
material = SubResource( 15 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="building/StaticBody/buildingMesh/CSGBox/massive"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 434.1, 10.2 )
stream = ExtResource( 21 )
max_db = -24.0
bus = "sfx"

[node name="AudioStreamPlayer3D2" type="AudioStreamPlayer3D" parent="building/StaticBody/buildingMesh/CSGBox/massive"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 434.1, 58.2 )
stream = ExtResource( 3 )
unit_db = 39.149
max_db = 6.0
bus = "sfx"

[node name="Particles" type="CPUParticles" parent="building/StaticBody/buildingMesh/CSGBox/massive"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -14, 434.1, 10.2 )
amount = 100
lifetime = 0.5
mesh = SubResource( 2 )
emission_shape = 2
emission_box_extents = Vector3( 25, 50, 25 )
direction = Vector3( 0, 1, 0 )
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
scale_amount = 25.0

[node name="ventDoor" parent="building/StaticBody" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1.5, 4.7 )

[node name="Sprite3D" type="Sprite3D" parent="building/StaticBody"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -14, 4, 4.8 )
texture = ExtResource( 17 )

[node name="terrain" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -74, 0 )
extra_cull_margin = 16384.0
mesh = SubResource( 19 )

[node name="Particles2" type="CPUParticles" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 26, 0.0999756, -20.1 )
emitting = false
amount = 20
lifetime = 2.0
one_shot = true
explosiveness = 1.0
mesh = SubResource( 2 )
emission_shape = 2
emission_box_extents = Vector3( 10, 1, 10 )
direction = Vector3( 1, 1, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
scale_amount = 25.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 27 )

[connection signal="body_entered" from="building/endPoint/Area" to="building/endPoint" method="_on_Area_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
